# TEA-file-encryptor

./: .clang-format  CMakeLists.txt  README.md
include/: TEA.hpp  terminal_echo.hpp
src/: main.cpp
test/: run_tests.cpp
test/assets/: test1.txt  test1_encrypted_key123.txt
